# attica

./: .kateproject  CMakeLists.txt
autotests/: CMakeLists.txt  providertest.cpp
src/: CMakeLists.txt  accountbalanceparser.cpp  activity.h  atticabasejob.cpp  atticabasejob.h  comment.h  content.cpp  content.h  deletejob.cpp  downloaddescription.cpp  downloaddescription.h  downloaditemparser.cpp  getjob.cpp  listjob.h  listjob_inst.cpp  parser.h  platformdependent.h  platformdependent_v2.h  postjob.cpp  provider.h  providermanager.cpp  putjob.cpp
src/cmake/: libattica.pc.cmake
tests/projecttest/: CMakeLists.txt  projecttest.cpp
